--- a/src/pages/Home/style.css
+++ b/src/pages/Home/style.css
@@ -2,3 +2,32 @@
     background-color: aqua;
     height: 400px;
 }
+.home-p{
+ 
+    height: 200px;
+    color: red;
+    font-size: 40px;
+
+}
+.content-div{
+    background-color: red;
+    display: flex;
+    gap: 10px;
+}
+.box-p{
+    padding: 10px;
+    background-color: red;
+}
+.box{
+    border: 3px solid black;
+    background-color: antiquewhite;
+}
+.home-sekil1{
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+}
+.orta1{
+    width: 100%;
+    height:100%;
+}
