--- a/src/pages/Home/style.css
+++ b/src/pages/Home/style.css
@@ -31,3 +31,14 @@
     width: 100%;
     height:100%;
 }
+
+
+
+.con{
+    background-color: blueviolet;
+}
+
+/* .ant-layout-content{
+    background-color: brown;
+    height: 300px;
+} */
